# netdata

./: .gitignore  .windsurfrules  README.md  ipam-changes-plan.md  openapi.json
example/: fields.py
ipam/: README.md  __init__.py  netssh-rs-implementation-details.md  webssh-architecture-comparison.md  webssh-python-bindings-plan.md  webssh-rs-minimal-plan.md
ipam/backend/: __init__.py  alembic.ini  alembic_fix.py  create_migration.py  openapi.json  requirements.txt  test_models.py
ipam/backend/alembic/: env.py  (+1 more)
ipam/docs/: models.puml
ipam/frontend/: OPTIMIZATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
ipam/webssh-rs/: API.md  Cargo.toml  README.md  check_server.sh  pyproject.toml  settings.json  setup.py  start_backend_with_debug.sh  test_api.sh  test_websocket.py  test_websocket_direct.py  webssh.pid
ipam/webssh-rs/examples/: basic_usage.py  fastapi_websocket.py  websocket_client.html
ipam/webssh-rs/python/webssh_rs/: __init__.py  device.py  session.py
ipam/webssh-rs/src/: lib.rs  main.rs  protocol.rs  python.rs  session.rs  settings.rs  websocket.rs
ipam/webssh-rs/src/ssh/: error.rs  mod.rs  session.rs
ipam/webssh-rs/static/: connect.html  index.html  script.js  styles.css
ipam/webssh-rs/static/css/: terminal.css
ipam/webssh-rs/static/js/: advanced-cache-manager.js  app.js  batch-renderer.js  binary-protocol.js  enhanced-text-renderer.js  font-atlas.js  live-dashboard.js  object-pool.js  session-control.js  subpixel-renderer.js  terminal-core.js  text-shaping.js  virtual-scrolling.js  websocket-handler.js  worker-thread-manager.js
(+291 files in other folders)
