[package]
name = "webssh-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "webssh_rs"
crate-type = ["cdylib"]

[dependencies]
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
tokio = { version = "1.35", features = ["rt", "macros", "sync"] }
bytes = "1.5"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
