[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "webssh_rs"
version = "0.1.0"
description = "Python bindings for SSH functionality"
authors = [
    {name = "IPAM Team", email = "example@example.com"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

[project.urls]
Repository = "https://github.com/example/webssh-rs"
Documentation = "https://github.com/example/webssh-rs#readme"
"Bug Tracker" = "https://github.com/example/webssh-rs/issues"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "webssh_rs.webssh_rs"